// Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
// or more contributor license agreements. Licensed under the Elastic License;
// you may not use this file except in compliance with the Elastic License.

syntax = "proto3";

package cproto;

option cc_enable_arenas = true;
option go_package = "internal/pkg/agent/control/cproto";

// State codes for the current state.
enum State {
  STARTING = 0;
  CONFIGURING = 1;
  HEALTHY = 2;
  DEGRADED = 3;
  FAILED = 4;
  STOPPING = 5;
  STOPPED = 6;
  UPGRADING = 7;
  ROLLBACK = 8;
}

// Unit Type running inside a component.
enum UnitType {
  INPUT = 0;
  OUTPUT = 1;
}

// Action status codes for restart and upgrade response.
enum ActionStatus {
  // Action was successful.
  SUCCESS = 0;
  // Action failed.
  FAILURE = 1;
}

// pprof endpoint that can be requested.
enum PprofOption {
	ALLOCS = 0;
	BLOCK = 1;
	CMDLINE = 2;
	GOROUTINE = 3;
	HEAP = 4;
	MUTEX = 5;
	PROFILE = 6;
	THREADCREATE = 7;
	TRACE = 8;
}

// Empty message.
message Empty {
}

// Version response message.
message VersionResponse {
  // Current running version.
  string version = 1;
  // Current running commit.
  string commit = 2;
  // Current running build time.
  string buildTime = 3;
  // Current running version is a snapshot.
  bool snapshot = 4;
}

message RestartResponse {
  // Response status.
  ActionStatus status = 1;
  // Error message when it fails to trigger restart.
  string error = 2;
}

// Upgrade request message.
message UpgradeRequest {
  // (Optional) Version to upgrade to.
  //
  // If not provided Elastic Agent will auto discover the latest version in the same major
  // to upgrade to. If wanting to upgrade to a new major that major must be present in the
  // this version field.
  string version = 1;

  // (Optional) Use a different source URI then configured.
  //
  // If provided the upgrade process will use the provided sourceURI instead of the configured
  // sourceURI in the configuration.
  string sourceURI = 2;
}

// A upgrade response message.
message UpgradeResponse {
  // Response status.
  ActionStatus status = 1;

  // Version that is being upgraded to.
  string version = 2;

  // Error message when it fails to trigger upgrade.
  string error = 3;
}

message ComponentUnitState {
  // Type of unit in the component.
  UnitType unit_type = 1;
  // ID of the unit in the component.
  string unit_id = 2;
  // Current state.
  State state = 3;
  // Current state message.
  string message = 4;
  // Current state payload.
  string payload = 5;
}

// Version information reported by the component to Elastic Agent.
message ComponentVersionInfo {
  // Name of the component.
  string name = 1;
  // Version of the component.
  string version = 2;
  // Extra meta information about the version.
  map<string, string> meta = 3;
}

// Current state of a running component by Elastic Agent.
message ComponentState {
  // Unique component ID.
  string id = 1;
  // Component name.
  string name = 2;
  // Current state.
  State state = 3;
  // Current state message.
  string message = 4;
  // Current units running in the component.
  repeated ComponentUnitState units = 5;
  // Current version information for the running component.
  ComponentVersionInfo version_info = 6;
}

// Current metadata for a running process.
message ProcMeta {
  string process = 1;
  string name = 2;
  string hostname = 3;
  string id = 4;
  string ephemeral_id = 5;
  string version = 6;
  string build_commit = 7;
  string build_time = 8;
  string username = 9;
  string user_id = 10;
  string user_gid = 11;
  string architecture = 12;
  string route_key = 13;
  bool elastic_licensed = 14;
  string error = 15;
}

// StateResponse is the current state of Elastic Agent.
message StateResponse {
  // Overall state of Elastic Agent.
  State state = 1;
  // Overall status message of Elastic Agent.
  string message = 2;
  // Status of each component in Elastic Agent.
  repeated ComponentState components = 3;
}

// ProcMetaResponse is the current running version infomation for all processes.
message ProcMetaResponse {
  repeated ProcMeta procs = 1;
}

// PprofRequest is a request for pprof data from and http/pprof endpoint.
message PprofRequest {
	// The profiles that are requested
	repeated PprofOption pprofType = 1;
	// A string representing a time.Duration to apply to trace, and profile options.
	string traceDuration = 2;
	// The application that will be profiled, if empty all applications are profiled.
	string appName = 3;
	// The route key to match for profiling, if empty all are profiled.
	string routeKey = 4;
}

// PprofResult is the result of a pprof request for a given application/route key.
message PprofResult {
	string appName = 1;
	string routeKey = 2;
	PprofOption pprofType = 3;
	bytes result = 4;
	string error = 5;
}

// PprofResponse is a wrapper to return all pprof responses.
message PprofResponse {
	repeated PprofResult results = 1;
}

// MetricsResponse is the result of a request for the metrics buffer endpoint for a application/route key
message MetricsResponse {
	string appName = 1;
	string routeKey = 2;
	bytes result = 3;
	string error = 4;
}

// ProcMetricsResponse is a wrapper to return all metrics buffer responses
message ProcMetricsResponse {
	repeated MetricsResponse result = 1;
}

service ElasticAgentControl {
  // Fetches the currently running version of the Elastic Agent.
  rpc Version(Empty) returns (VersionResponse);

  // Fetches the currently states of the Elastic Agent.
  rpc State(Empty) returns (StateResponse);

  // Restart restarts the current running Elastic Agent.
  rpc Restart(Empty) returns (RestartResponse);

  // Upgrade starts the upgrade process of Elastic Agent.
  rpc Upgrade(UpgradeRequest) returns (UpgradeResponse);

  // Gather all running process metadata.
  rpc ProcMeta(Empty) returns (ProcMetaResponse);

  // Gather requested pprof data from specified applications.
  rpc Pprof(PprofRequest) returns (PprofResponse);

  // Gather all running process metrics.
  rpc ProcMetrics(Empty) returns (ProcMetricsResponse);
}
